- Fixed bug where minutes would round up displaying one more than correct - Improved the Popup with links to canyoutoast.com and strava - fixed not running on run pages due to order & page content being different - improved readablity of the badge text with line spacing

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
     grid-row: 2;
     text-align: center;
     font-size: 1.2vw;
+    line-height: 1.4;
 }
 
 
